--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-i18next": "^12.2.0",
+    "react-modal": "^3.16.1",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
