--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@willsoto/nestjs-objection": "^8.1.0",
+    "csv-write-stream": "^2.0.0",
     "date-fns": "^2.29.3",
     "joi": "^17.6.3",
     "knex": "^2.3.0",
